# esp-idf-ble-srv

./: CMakeLists.txt  LICENSE  README.md
ble_srv/: CMakeLists.txt  Kconfig  idf_component.yml
ble_srv/include/: ble_srv.h  ble_srv_core.h  ble_srv_device.h  ble_srv_gatt.h  ble_srv_led.h  ble_srv_log.h  ble_srv_msg.h  ble_srv_ota.h  ble_srv_ota_bt.h  ble_srv_ota_common.h  ble_srv_ota_url.h  ble_srv_temp_sensor.h  ble_srv_wifi.h
ble_srv/src/: ble_srv_core.c  ble_srv_device.c  ble_srv_gatt.c  ble_srv_led.c  ble_srv_log.c  ble_srv_ntp.c  ble_srv_ota.c  ble_srv_ota_bt.c  ble_srv_ota_common.c  ble_srv_ota_url.c  ble_srv_task.c  ble_srv_temp_sensor.c  ble_srv_wifi.c
docs/: BLE_COMMANDS.md  BLE_SRV_MODULE.md  PYTHON_CLI.md  PYTHON_GUI.md
examples/basic/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/basic/main/: CMakeLists.txt  main.c
tools/: _check_icons.py  ble_gui_client.py  client.py  client_gui.py  config.json
tools/ble_client/: __init__.py  client.py  constants.py  led.py  models.py  temperature.py  wifi.py
tools/client/: __init__.py  ble_core.py  client.py  constants.py  models.py  ota.py  wifi.py
tools/client_gui/: __init__.py  ble_core.py  gui_components.py  gui_handlers.py
tools/client_gui/components/: app_bar.py  base.py  left_panel.py  log_panel.py
tools/client_gui/components/tabs/: base_tab.py  custom_cmd_tab.py  info_tab.py  led_tab.py  log_tab.py  ota_tab.py  wifi_tab.py
tools/client_gui/handlers/: base.py  connection.py  custom_cmd_control.py  device_info.py  led_control.py  log_control.py  ota_control.py  wifi_control.py
